import { afterEach, describe, it } from "vitest";
import { Package } from "../helpers.ts";

let pkg: Package;

afterEach(() => pkg.cleanUp());

it("generates a function-based `.js` modifier", async (ctx) => {
  pkg = await Package.create("v2-addon");

  await pkg.gember("modifier", "foo");

  const content = await pkg.readFile("src/modifiers/foo.js");

  ctx.expect(content).toMatchSnapshot();
});

it("generates a class-based `.js` modifier", async (ctx) => {
  pkg = await Package.create("v2-addon");

  await pkg.gember("modifier", "foo", "--classBased");

  const content = await pkg.readFile("src/modifiers/foo.js");

  ctx.expect(content).toMatchSnapshot();
});

it("generates a function-based `.js` modifier at a custom path", async (ctx) => {
  pkg = await Package.create("v2-addon");

  await pkg.gember("modifier", "foo", "--path=src/-private");

  const content = await pkg.readFile("src/-private/foo.js");

  ctx.expect(content).toMatchSnapshot();
});

it("generates a function-based `.ts` modifier", async (ctx) => {
  pkg = await Package.create("v2-addon");

  await pkg.gember("modifier", "foo", "--typescript");

  const content = await pkg.readFile("src/modifiers/foo.ts");

  ctx.expect(content).toMatchSnapshot();
});

it("generates a class-based `.ts` modifier", async (ctx) => {
  pkg = await Package.create("v2-addon");

  await pkg.gember("modifier", "foo", "--classBased", "--typescript");

  const content = await pkg.readFile("src/modifiers/foo.ts");

  ctx.expect(content).toMatchSnapshot();
});

it("generates a function-based `.ts` modifier at a custom path", async (ctx) => {
  pkg = await Package.create("v2-addon");

  await pkg.gember("modifier", "foo", "--path=src/-private", "--typescript");

  const content = await pkg.readFile("src/-private/foo.ts");

  ctx.expect(content).toMatchSnapshot();
});

it("generates a nested function-based `.js` modifier", async (ctx) => {
  pkg = await Package.create("v2-addon");

  await pkg.gember("modifier", "foo/bar");

  const content = await pkg.readFile("src/modifiers/foo/bar.js");

  ctx.expect(content).toMatchSnapshot();
});

it("generates a corresponding modifier-test", async (ctx) => {
  pkg = await Package.create("v2-addon");

  await pkg.gember("modifier", "foo", "--test");

  ctx.expect(await pkg.pathExists("src/modifiers/foo.js")).to.equal(true);
  ctx
    .expect(await pkg.pathExists("tests/integration/modifiers/foo-test.gjs"))
    .to.equal(true);
});

it("destroys a modifier", async (ctx) => {
  pkg = await Package.create("v2-addon");

  await pkg.gember("modifier", "foo");

  ctx.expect(await pkg.pathExists("src/modifiers/foo.js")).to.equal(true);

  await pkg.gember("modifier", "foo", "--destroy");

  ctx.expect(await pkg.pathExists("src/modifiers/foo.js")).to.equal(false);
});

describe("generates a named export", () => {
  for (const args of [
    [],
    ["--classBased"],
    ["--classBased", "--typescript"],
    ["--typescript"],
  ]) {
    it(args.length ? args.join(" ") : "no extra args", async (ctx) => {
      pkg = await Package.create("v2-addon");

      await pkg.gember("modifier", "foo", "--namedExport", ...args);

      const content = await pkg.readFile(
        addExtension("src/modifiers/foo", args),
      );

      ctx.expect(content).toMatchSnapshot();
    });
  }
});

function addExtension(path: string, args: string[]): string {
  return path + (args.includes("--typescript") ? ".ts" : ".js");
}
